# FbxPipeline

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  UpdateScenes.bat  UpdateScenes.js  UpdateScenes.sh  appveyor.yml
FbxPipeline/: FbxPipeline.sln  FbxPipeline.sublime-project
FbxPipeline/CppDump/: CppDump.vcxproj  main.cpp
FbxPipeline/EmbeddedShaderCompiler/: EmbeddedShaderCompiler.cpp  EmbeddedShaderCompiler.h  EmbeddedShaderCompiler.vcxproj  EmbeddedShaderCompiler.vcxproj.filters  build-version.inc
FbxPipeline/EmbeddedShaderPreprocessor/: EmbeddedShaderPreprocessor.cpp  EmbeddedShaderPreprocessor.h  EmbeddedShaderPreprocessor.vcxproj  EmbeddedShaderPreprocessor.vcxproj.filters
FbxPipeline/FbxPipeline/: CityHash.cpp  FbxPipeline.vcxproj  FbxPipeline.vcxproj.filters  animation.cpp  fbxpacking.cpp  fbxpanimation.cpp  fbxpbez.cpp  fbxpcam.cpp  fbxpembeddedpy.cpp  fbxpextensions.cpp  fbxpfileutils.cpp  fbxplight.cpp  fbxplnkdraco.cpp  fbxpmaterial.cpp  fbxpmem.cpp  fbxpmesh.cpp  fbxpmeshopt.cpp  fbxpnode.cpp  fbxpnorm.h  fbxppacking.cpp  fbxppch.cpp  fbxppch.h  fbxpstate.cpp  fbxpstate.h  fbxptransform.cpp  main.cpp  material.cpp  mesh.cpp  node.cpp  transform.cpp
FbxPipeline/FbxPipeline/draco/: draco_features.h
FbxPipeline/FbxViewer/: App.cpp  App.h  AppBase.cpp  AppMainSdl.cpp  AppOS.h  AppSurface.cpp  AppSurface.h  AppSurfaceBase.h  AppSurfaceBgfx.cpp  AppSurfaceSdlBase.cpp  AppSurfaceSdlBgfx.cpp  FbxViewer.vcxproj  FbxViewer.vcxproj.filters  InputSdl.cpp  NuklearSdl.h  NuklearSdlBgfx.cpp  Scene.h  fbxvpch.cpp  fbxvpch.h  malloc.c.h
FbxPipeline/FbxViewerv2/: App.cpp  App.h  AppBase.cpp  AppBase.h  AppMainSdl.cpp  AppState.cpp  AppState.h  AppSurface.h  AppSurfaceBase.h  AppSurfaceSdlBase.cpp  AppSurfaceSdlBase.h  AppSurfaceSdlGL.cpp  AppSurfaceSdlGL.h  AppSurfaceSdlGL2.cpp  AppSurfaceSdlVk.cpp  AppSurfaceSdlVk.h  ArrayUtils.h  Camera.h  CameraControllerBase.h  CameraControllerFreeLook.h  CameraControllerInputBase.h  CameraControllerInputMouseKeyboard.h  CameraControllerModelView.h  CameraControllerProjection.h  CameraInputMouse.h  CityHash.cpp  CityHash.h  DebugRenderer.cpp  DebugRenderer.h  DebugRendererVk.cpp  DebugRendererVk.h  FbxViewerOS.cpp  FbxViewerOS.h  FbxViewerv2.vcxproj  FbxViewerv2.vcxproj.filters  FileTracker.cpp  FileTracker.h  IAppSurface.h  ISceneRenderer.h  ImageLoaderVk.cpp  (+24 more)
FbxPipeline/FbxViewerv2/vk/: Buffer.Vulkan.cpp  Buffer.Vulkan.h  BufferPools.Vulkan.cpp  BufferPools.Vulkan.h  CityHash.cpp  CityHash.h  CommandQueue.Vulkan.cpp  CommandQueue.Vulkan.h  DepthStencil.Vulkan.cpp  DepthStencil.Vulkan.h  DescriptorPool.Vulkan.cpp  DescriptorPool.Vulkan.h  ExecutionSync.Vulkan.cpp  ExecutionSync.Vulkan.h  Framebuffer.Vulkan.cpp  Framebuffer.Vulkan.h  GraphicsDevice.PrivateContent.Vulkan.h  GraphicsDevice.Vulkan.cpp  GraphicsDevice.Vulkan.h  GraphicsEcosystem.KnownExtensions.Vulkan.h  GraphicsEcosystem.KnownLayers.Vulkan.h  GraphicsEcosystem.PrivateContent.Vulkan.h  GraphicsEcosystem.PrivateCreateDeviceArgs.Vulkan.h  GraphicsEcosystems.Vulkan.cpp  GraphicsEcosystems.Vulkan.h  GraphicsManager.KnownExtensions.Vulkan.h  GraphicsManager.KnownLayers.Vulkan.h  GraphicsManager.PrivateContent.Vulkan.h  GraphicsManager.PrivateCreateDeviceArgs.Vulkan.h  GraphicsManager.Vulkan.cpp  GraphicsManager.Vulkan.h  NativeDispatchableHandles.Vulkan.h  PipelineLayout.Vulkan.cpp  PipelineLayout.Vulkan.h  PipelineState.Vulkan.cpp  PipelineState.Vulkan.h  Platform.Vulkan.h  QueuePools.Vulkan.cpp  QueuePools.Vulkan.h  RenderPass.Vulkan.cpp  (+28 more)
FbxPipeline/JsDump/: index.js
FbxPipeline/bgfx/: bgfx.vcxproj  bgfx.vcxproj.filters
FbxPipeline/bx/: bx.vcxproj  bx.vcxproj.filters
FbxPipeline/cityhash/: cityhash.vcxproj  cityhash.vcxproj.filters
FbxPipeline/draco/: draco.vcxproj
FbxPipeline/fcpp/: cpp2.c  cpp3.c  cpp6.c  cppadd.h  fpp.h
FbxPipeline/flatbuffers/: flatbuffers.vcxproj  flatbuffers.vcxproj.filters
FbxPipeline/flatc/: flatc.vcxproj  flatc.vcxproj.filters
FbxPipeline/generated_v2/: scene_generated.h  scene_generated.js
FbxPipeline/generated_v2/v140x64Release/: scene_generated.js
FbxPipeline/include/utils/: FbxPipelineSceneUtils.h
FbxPipeline/lodepng/: lodepng.vcxproj  lodepng.vcxproj.filters
FbxPipeline/lua/: lua.vcxproj  lua.vcxproj.filters
FbxPipeline/lz4/: lz4.vcxproj  lz4.vcxproj.filters
FbxPipeline/meshoptimizer/: meshoptimizer.vcxproj  meshoptimizer.vcxproj.filters
FbxPipeline/schemes/: scene.fbs
FbxPipeline/scripts/: CompileShaders.js  glTFMaterialExtension.py
FbxPipeline/sdl2/: sdl2.vcxproj  sdl2.vcxproj.filters
FbxPipeline/shaders/apemode/: Scene.frag  Scene.vert  Skybox.frag  Skybox.vert  Skyboxv2.vert  shaderlib.inc
FbxPipeline/shaders/blur/: fs_blur13.sc  fs_blur5.sc  fs_blur9.sc  fs_blur_masked_combine.sc
FbxPipeline/shaders/cube/: cube.frag  cube.vert
FbxPipeline/shaders/mesh_ibl/: fs_ibl_mesh.sc  uniforms.sh  varying.def.sc  vs_ibl_mesh.sc
FbxPipeline/shaders/nk/: nuklear_vk.frag  nuklear_vk.vert
FbxPipeline/shaders/nuklear_texture/: fs_nuklear_texture.sc  vs_nuklear_texture.sc
FbxPipeline/shaders/skybox/: fs_ibl_skybox.sc  varying.def.sc  vs_ibl_skybox.sc
FbxPipeline/snappy/: snappy.vcxproj
FbxPipeline/tbb/: tbb.vcxproj  tbb.vcxproj.filters
dbuildubuntu/: CMakeCache.txt  Makefile  cmake_install.cmake
